--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,15 @@
 spring:
+  devtools:
+    restart:
+      enabled: true  #设置开启热部署
+      additional-paths: src/main/java #重启目录
+      exclude: templates/**
+    freemarker:
+      cache: false    #页面不加载缓存，修改即时生效
   thymeleaf:
+    cache: false
     prefix:
       classpath: /templates
-    cache: false
 mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
   type-aliases-package: com.longlong.entity
