--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_recruitment?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=tl315288
+
+filepath=D:/github/online-recruitment/src/main/resources/resume/
